# Delayed-mailing

./: README.md  pyproject.toml
blog/: admin.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: create_form.html  edit_form.html  main_page.html  post_detail.html  post_list.html
config/: settings.py  urls.py
mailing_creation/: admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
mailing_creation/management/commands/: pmail.py
mailing_creation/migrations/: 0001_initial.py  0002_initial.py  0003_alter_newsletter_options_alter_newsletter_status.py
mailing_creation/templates/mailing_creation/: base.html  newsletter_form.html  newsletter_info.html  newsletter_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: profile_detail.html
